# rest2mcp

./: .mcp.json  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
src/: settings.py
src/api/: app.py
src/api/routes/: notes.py
src/env/local/: .env
src/lib/: store.py
src/server/: main.py
tests/: test_api.py  test_mcp_tools.py
